--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Postal Rate Calculator</title>
+    <title>We Got This! | Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -11,22 +11,43 @@
     <h1>We Got This!</h1>
 </header>
 <body>
-    <div class="col-sm-8">    
-        <div class="jumbotron">
-            <h1>Log In</h1>
-            
-            <form method="GET" action="/login">
-                <input type="email" name="email" placeholder="Email">
-                <input type="password" name="password" placeholder="Password">
-                <input type="submit" value="Submit" class="btn btn-primary"> 
-            </form>
+    
+    <h1>Pick Category</h1>
+    <form action="/getCategory" method="GET">
+        <input name="id" type="integer" value="1" hidden/><br />
+        <button onclick="getCategory(id.value)">Sleeping</button>
+    </form>
 
-            <div id="result"></div>
-        </div>
-    </div>
-
-    <h2>Categories</h2>
     <div id="categories"></div>
+
+    <script language="javascript">
+        function getCategory(id) {
+            console.log(id);
+
+            /* Clear result div*/
+            $('#categories').html('');
+
+            /* Get from elements values */
+            var postForm = {
+                //Fetch form data
+                id: id //Store name fields value
+            };
+            $.ajax({
+                type: 'GET',
+                data: postForm,
+                url: '/getCategory',
+                dataType: 'json',
+                success: function(data) {
+                    console.log(data);
+                    data = JSON.stringify(data);
+                    $('#categories').html('<strong>Result:</strong> ' + data); //what i try to do but don't work
+                },
+                error: function(xhr, status, error) {
+                    console.log(error);
+                }
+            });
+        }
+    </script>
    
 </body>
 </html>
