--- a/public/index.html
+++ b/public/index.html
@@ -50,15 +50,33 @@
                 success: function(data) {
                     console.log("Inside AJAX");
                     console.log(data);
-                    //data = JSON.stringify(data);
-                    //data = JSON.parse(date);
-                    $('#categories').html('<h4>Tip:</h4> ' + data.tip_title + '</br>' + data.tip_description + '<br /><b>Tip By: </b>' + data.username + '<br /><b>Thumbs up:</b>' + data.thumbs_up + '<br /><b>Thumbs down: </b>' + data.thumbs_down);
+                    updateResultList(data);
+                    //$('#categories').html('<h4>Tip:</h4> ' + data.tip_title + '</br>' + data.tip_description + '<br /><b>Tip By: </b>' + data.username + '<br /><b>Thumbs up:</b>' + data.thumbs_up + '<br /><b>Thumbs down: </b>' + data.thumbs_down);
                 },
                 error: function(xhr, status, error) {
                     console.log(error);
                 }
             });
         }
+
+        function updateResultList(data) {
+         if (data.length > 0) {
+             var resultList = $('#categories');
+             resultList.empty();
+             // you could use a forEach here as well...
+            for (var i = 0; i < data.length; i++) {
+            var title = data[i].tip_title;
+            var description = data[i].tip_description;
+            var username = data[i].username;
+            var thumbs_up = data[i].thumbs_up;
+            var thumbs_down = data[i].thumbs_down;
+            resultList.append('<h4>Tip:</h4> ' + title + '</br>' + description + '<br /><b>Tip By: </b>' + username + '<br /><b>Thumbs up:</b>' + thumbs_up + '<br /><b>Thumbs down: </b>' + thumbs_down + '<br /><button type="button" onclick="thumbsUp()">Thumbs Up</button><br /><button type="button" onclick="thumbsDown()">Thumbs Down</button>');
+            }
+        }
+        else {
+            console.log("Error")
+        }
+    }
     </script>
    
 </body>
