--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="ajax.js"></script>
 </head>
 <header>
     <h1>We Got This!</h1>
@@ -15,18 +16,34 @@
         <div class="jumbotron">
             <h1>Log In</h1>
             
-            <form method="GET" action="/login">
+            <form>
                 <input type="email" name="email" placeholder="Email">
                 <input type="password" name="password" placeholder="Password">
-                <input type="submit" value="Submit" class="btn btn-primary"> 
+                <!-- <input type="submit" value="Submit" class="btn btn-primary">  -->
+                <button type="button" onclick="checkLogin(email.value, password.value)">Search</button>
             </form>
 
             <div id="result"></div>
         </div>
     </div>
 
-    <h2>Categories</h2>
-    <div id="categories"></div>
+    <div class="col-sm-8">    
+        <div class="jumbotron">
+            <h1>Sign Up</h1>
+            
+            <form>
+                <input type="text" name="fName" placeholder="First Name" required>
+                <input type="text" name="lName" placeholder="Last Name" required>
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <!-- <input type="submit" value="Submit" class="btn btn-primary">  -->
+                <button type="button" onclick="createUser(fName.value, lName.value, username.value, email.value, password.value)">Create User</button>
+            </form>
+
+            <div id="result"></div>
+        </div>
+    </div>
    
 </body>
 </html>
