--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
                 <input type="email" name="email" placeholder="Email">
                 <input type="password" name="password" placeholder="Password">
                 <!-- <input type="submit" value="Submit" class="btn btn-primary">  -->
-                <button type="button" onclick="checkLogin(email.value, password.value)">Search</button>
+                <button type="button" onclick="checkLogin(email.value, password.value)">Login</button>
             </form>
 
             <div id="result"></div>
