--- a/public/category.html
+++ b/public/category.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Surviving Parenthood</h1>
         <h4>One Tip at a Time</h4>
-         <div id="header-line"></div>
+         <div class="header-line"></div>
     </header>
     <main id="category-main">
         <button onclick="logout()" class="btn">Log out</button>
