--- a/public/login.html
+++ b/public/login.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Surviving Parenthood</h1>
         <h4>One Tip at a Time</h4>
-         <div id="header-line"></div>
+         <div class="header-line"></div>
     </header>
     <main>
         <p>Surviving Parenthood is a place for parents/caregivers to come together and give tips to help one another raise their kids. Login to see and add tips. If you don't have an account, <b>sign up</b> today!</p>
@@ -49,7 +49,7 @@
      </div>
     </main>
    <footer>
-    <div id="header-line"></div>
+    <div class="header-line"></div>
     <p>Copyright 2019 Surviving Parenthood</p>
    </footer>
 </body>
