--- a/public/login.html
+++ b/public/login.html
@@ -42,7 +42,7 @@
                         <input type="text" name="username" placeholder="Username" required />
                         <input type="email" name="email" placeholder="Email" required />
                         <input type="password" name="password" placeholder="Password" required />
-                        <button type="" onclick="createUser(fname.value, lname.value, username.value, email.value, password.value)" class="btn">Create User</button>
+                        <button onclick="createUser(fname.value, lname.value, username.value, email.value, password.value)" class="btn">Create User</button>
                     </form>
             </div>
             <img src="images/boy-super-hero.jpg" alt="super boy">
