--- a/public/login.html
+++ b/public/login.html
@@ -35,6 +35,7 @@
             
                     <div id="signUpStatus"></div>
                     <h2>Sign Up</h2>
+                    <p>*all fields are required</p>
                     
                     <form id="signUp" method="" action="">
                         <input type="text" name="fname" placeholder="First Name" required />
