--- a/public/login.html
+++ b/public/login.html
@@ -37,7 +37,7 @@
                     <h2>Sign Up</h2>
                     <p>*all fields are required</p>
                     
-                    <form id="signUp" method="" action="">
+                    <form id="signUp">
                         <input type="text" name="fname" placeholder="First Name" required />
                         <input type="text" name="lname" placeholder="Last Name" required />
                         <input type="text" name="username" placeholder="Username" required />
