--- a/public/login.html
+++ b/public/login.html
@@ -34,7 +34,7 @@
                     </form>
             
                     <div id="signUpStatus"></div>
-                    <h2>Sign Up</h2>
+                    <h2 id="signup-header">Sign Up</h2>
                     <p>*all fields are required</p>
                     
                     <form id="signUp">
