--- a/public/login.html
+++ b/public/login.html
@@ -29,7 +29,6 @@
                     <form id="login">
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="password" name="password" placeholder="Password" required>
-                        <!-- <input type="submit" value="Submit" class="btn btn-primary">  -->
                         <button type="button" onclick="checkLogin(email.value, password.value)" class="btn">Login</button>
                     </form>
             
@@ -38,11 +37,11 @@
                     <p>*all fields are required</p>
                     
                     <form id="signUp">
-                        <input type="text" name="fname" placeholder="First Name" required />
-                        <input type="text" name="lname" placeholder="Last Name" required />
-                        <input type="text" name="username" placeholder="Username" required />
-                        <input type="email" name="email" placeholder="Email" required />
-                        <input type="password" name="password" placeholder="Password" required />
+                        <input type="text" name="fname" placeholder="First Name" />
+                        <input type="text" name="lname" placeholder="Last Name" />
+                        <input type="text" name="username" placeholder="Username" />
+                        <input type="email" name="email" placeholder="Email" />
+                        <input type="password" name="password" placeholder="Password" />
                         <button onclick="createUser(fname.value, lname.value, username.value, email.value, password.value)" class="btn">Create User</button>
                     </form>
             </div>
